performed additional statistical analysis

--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -1006,31 +1006,252 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 360,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-04-08T21:56:43.196920Z",
+     "start_time": "2020-04-08T21:56:43.186924Z"
+    }
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "from itertools import combinations"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 388,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-04-08T23:07:52.605517Z",
+     "start_time": "2020-04-08T23:07:52.596527Z"
+    }
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "# Run a Welch's T-test on all samples to evaluate differences.\n",
+    "def ttest_for_reviews(score_list, alpha = 0.05):\n",
+    "    '''\n",
+    "    Given a list of name-array tuples (created in df_to_scores), this \n",
+    "    function runs a Welch's t-test between all pairs with an Bonferroni\n",
+    "    correction.\n",
+    "    \n",
+    "    Parameters:\n",
+    "    score_list (list of tuples): list of name-series tuples\n",
+    "    alpha (float): desired alpha for each individual t-test\n",
+    "    \n",
+    "    Returns:\n",
+    "    results (list of tuples): list of tuples for any t-tests that provide an\n",
+    "    p-value less than alpha (Bonferroni corrected)\n",
+    "    '''\n",
+    "    results = []\n",
+    "    bonf = alpha / len(score_list)\n",
+    "    for x, y in combinations(score_list, 2):\n",
+    "        name1, name2, scores1, scores2 = x[0], y[0], x[1], y[1]\n",
+    "        tstat, pvalue = stats.ttest_ind(scores1, scores2, equal_var = False)\n",
+    "        print(f'{name1} & {name2}: p-value = {pvalue}, t-value = {tstat}')\n",
+    "        if pvalue < bonf:\n",
+    "              results.append((name1, name2))\n",
+    "    return results"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 389,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-04-08T23:07:53.998719Z",
+     "start_time": "2020-04-08T23:07:53.821825Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('alt-country', 'alternative'),\n",
+       " ('alt-country', 'dance'),\n",
+       " ('alt-country', 'electronic'),\n",
+       " ('alt-country', 'house'),\n",
+       " ('alt-country', 'indie'),\n",
+       " ('alt-country', 'metal'),\n",
+       " ('alt-country', 'pop'),\n",
+       " ('alt-country', 'rap'),\n",
+       " ('alt-country', 'rb'),\n",
+       " ('alt-country', 'reggae'),\n",
+       " ('alt-country', 'rock'),\n",
+       " ('alt-country', 'singer-songwriter'),\n",
+       " ('alt-country', 'vocal'),\n",
+       " ('alternative', 'blues'),\n",
+       " ('alternative', 'country'),\n",
+       " ('alternative', 'electronic'),\n",
+       " ('alternative', 'experimental'),\n",
+       " ('alternative', 'folk'),\n",
+       " ('alternative', 'house'),\n",
+       " ('alternative', 'indie'),\n",
+       " ('alternative', 'jazz'),\n",
+       " ('alternative', 'latin'),\n",
+       " ('alternative', 'pop'),\n",
+       " ('alternative', 'punk'),\n",
+       " ('alternative', 'rap'),\n",
+       " ('alternative', 'rb'),\n",
+       " ('alternative', 'rock'),\n",
+       " ('alternative', 'singer-songwriter'),\n",
+       " ('alternative', 'soul'),\n",
+       " ('alternative', 'techno'),\n",
+       " ('alternative', 'world'),\n",
+       " ('blues', 'dance'),\n",
+       " ('blues', 'electronic'),\n",
+       " ('blues', 'house'),\n",
+       " ('blues', 'indie'),\n",
+       " ('blues', 'metal'),\n",
+       " ('blues', 'pop'),\n",
+       " ('blues', 'rap'),\n",
+       " ('blues', 'rb'),\n",
+       " ('blues', 'reggae'),\n",
+       " ('blues', 'rock'),\n",
+       " ('blues', 'singer-songwriter'),\n",
+       " ('blues', 'vocal'),\n",
+       " ('country', 'dance'),\n",
+       " ('country', 'electronic'),\n",
+       " ('country', 'folk'),\n",
+       " ('country', 'indie'),\n",
+       " ('country', 'jazz'),\n",
+       " ('country', 'metal'),\n",
+       " ('country', 'pop'),\n",
+       " ('country', 'rap'),\n",
+       " ('country', 'rb'),\n",
+       " ('country', 'reggae'),\n",
+       " ('country', 'rock'),\n",
+       " ('country', 'singer-songwriter'),\n",
+       " ('country', 'vocal'),\n",
+       " ('dance', 'electronic'),\n",
+       " ('dance', 'experimental'),\n",
+       " ('dance', 'folk'),\n",
+       " ('dance', 'indie'),\n",
+       " ('dance', 'jazz'),\n",
+       " ('dance', 'pop'),\n",
+       " ('dance', 'soul'),\n",
+       " ('dance', 'techno'),\n",
+       " ('dance', 'world'),\n",
+       " ('electronic', 'experimental'),\n",
+       " ('electronic', 'folk'),\n",
+       " ('electronic', 'jazz'),\n",
+       " ('electronic', 'metal'),\n",
+       " ('electronic', 'pop'),\n",
+       " ('electronic', 'rap'),\n",
+       " ('electronic', 'rock'),\n",
+       " ('electronic', 'techno'),\n",
+       " ('electronic', 'vocal'),\n",
+       " ('electronic', 'world'),\n",
+       " ('experimental', 'indie'),\n",
+       " ('experimental', 'jazz'),\n",
+       " ('experimental', 'metal'),\n",
+       " ('experimental', 'pop'),\n",
+       " ('experimental', 'rap'),\n",
+       " ('experimental', 'rb'),\n",
+       " ('experimental', 'reggae'),\n",
+       " ('experimental', 'rock'),\n",
+       " ('experimental', 'singer-songwriter'),\n",
+       " ('experimental', 'vocal'),\n",
+       " ('folk', 'house'),\n",
+       " ('folk', 'indie'),\n",
+       " ('folk', 'jazz'),\n",
+       " ('folk', 'metal'),\n",
+       " ('folk', 'pop'),\n",
+       " ('folk', 'punk'),\n",
+       " ('folk', 'rap'),\n",
+       " ('folk', 'rb'),\n",
+       " ('folk', 'reggae'),\n",
+       " ('folk', 'rock'),\n",
+       " ('folk', 'singer-songwriter'),\n",
+       " ('folk', 'soul'),\n",
+       " ('folk', 'vocal'),\n",
+       " ('house', 'jazz'),\n",
+       " ('house', 'pop'),\n",
+       " ('house', 'world'),\n",
+       " ('indie', 'jazz'),\n",
+       " ('indie', 'metal'),\n",
+       " ('indie', 'pop'),\n",
+       " ('indie', 'rap'),\n",
+       " ('indie', 'rock'),\n",
+       " ('indie', 'techno'),\n",
+       " ('indie', 'vocal'),\n",
+       " ('indie', 'world'),\n",
+       " ('jazz', 'metal'),\n",
+       " ('jazz', 'pop'),\n",
+       " ('jazz', 'punk'),\n",
+       " ('jazz', 'rap'),\n",
+       " ('jazz', 'rb'),\n",
+       " ('jazz', 'reggae'),\n",
+       " ('jazz', 'rock'),\n",
+       " ('jazz', 'singer-songwriter'),\n",
+       " ('jazz', 'soul'),\n",
+       " ('jazz', 'soundtrack'),\n",
+       " ('jazz', 'techno'),\n",
+       " ('jazz', 'vocal'),\n",
+       " ('latin', 'metal'),\n",
+       " ('latin', 'pop'),\n",
+       " ('metal', 'singer-songwriter'),\n",
+       " ('metal', 'soul'),\n",
+       " ('metal', 'techno'),\n",
+       " ('metal', 'world'),\n",
+       " ('pop', 'punk'),\n",
+       " ('pop', 'rap'),\n",
+       " ('pop', 'rb'),\n",
+       " ('pop', 'rock'),\n",
+       " ('pop', 'singer-songwriter'),\n",
+       " ('pop', 'soul'),\n",
+       " ('pop', 'soundtrack'),\n",
+       " ('pop', 'techno'),\n",
+       " ('pop', 'world'),\n",
+       " ('rap', 'soul'),\n",
+       " ('rap', 'techno'),\n",
+       " ('rap', 'world'),\n",
+       " ('rb', 'techno'),\n",
+       " ('rb', 'world'),\n",
+       " ('reggae', 'techno'),\n",
+       " ('reggae', 'world'),\n",
+       " ('rock', 'soul'),\n",
+       " ('rock', 'techno'),\n",
+       " ('rock', 'world'),\n",
+       " ('singer-songwriter', 'world'),\n",
+       " ('soul', 'vocal'),\n",
+       " ('techno', 'vocal'),\n",
+       " ('vocal', 'world')]"
+      ]
+     },
+     "execution_count": 389,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ttest_for_reviews(w)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 390,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-04-08T23:07:55.601810Z",
+     "start_time": "2020-04-08T23:07:55.419916Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "300\n",
+      "150\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(list((combinations(w, 2)))))\n",
+    "print(len(ttest_for_reviews(w)))"
+   ]
   },
   {
    "cell_type": "code",
