updated normality graphs

--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -2216,11 +2216,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 529,
+   "execution_count": 544,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-10T03:34:43.864738Z",
-     "start_time": "2020-04-10T03:34:43.856742Z"
+     "end_time": "2020-04-10T04:55:26.417363Z",
+     "start_time": "2020-04-10T04:55:26.406373Z"
     }
    },
    "outputs": [],
@@ -2244,16 +2244,16 @@
     "    ax2.set_xlabel('Review Scores')\n",
     "    stats.probplot(all_scores, plot=ax3)\n",
     "    plt.show()\n",
-    "    plt.savefig('images/normality.png')"
+    "    plt.savefig('images/norm.png')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 530,
+   "execution_count": 545,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-10T03:34:47.175548Z",
-     "start_time": "2020-04-10T03:34:46.104039Z"
+     "end_time": "2020-04-10T04:55:29.710297Z",
+     "start_time": "2020-04-10T04:55:28.647161Z"
     }
    },
    "outputs": [
